crates/xifty-cli/tests/snapshots/cli_contract__extract_gps_jpeg_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
expression: "extract_json(\"gps.jpg\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "jpeg",
    "detected_format": "jpeg",
    "path": "gps.jpg"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "captured_at",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 174,
            "offset_start": 162,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "created_at",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 186,
            "offset_start": 174,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.make",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 58,
            "offset_start": 46,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyCam"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.model",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 70,
            "offset_start": 58,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "IterationOne"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "software",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 94,
            "offset_start": 82,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyTestGen"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "orientation",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 82,
            "offset_start": 70,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.width",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 34,
            "offset_start": 22,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 800
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.height",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 46,
            "offset_start": 34,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 600
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.iso",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 222,
            "offset_start": 210,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 200
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.aperture",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 210,
            "offset_start": 198,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 10,
            "numerator": 56
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.shutter_speed",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 198,
            "offset_start": 186,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 250,
            "numerator": 1
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.focal_length_mm",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 234,
            "offset_start": 222,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "float",
          "value": 50.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.model",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 258,
            "offset_start": 246,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty 50mm F2"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.make",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 246,
            "offset_start": 234,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty Optics"
        }
      },
      {
        "confidence": 0.8999999761581421,
        "field": "location",
        "sources": [
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 380,
            "offset_start": 368,
            "path": "gps_ifd"
          },
          {
            "container": "jpeg",
            "namespace": "exif",
            "offset_end": 404,
            "offset_start": 392,
            "path": "gps_ifd"
          }
        ],
        "value": {
          "kind": "coordinates",
          "value": {
            "latitude": 40.4462,
            "longitude": -79.9821
          }
        }
      }
    ]
  },
  "report": {
    "conflicts": [],
    "issues": []
  },
  "schema_version": "0.1.0"
}
