crates/xifty-cli/tests/snapshots/cli_contract__extract_happy_arw_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
assertion_line: 603
expression: "extract_json(\"happy.arw\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "arw",
    "detected_format": "arw",
    "path": "happy.arw"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "captured_at",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 146,
            "offset_start": 134,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "created_at",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 158,
            "offset_start": 146,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.make",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 46,
            "offset_start": 34,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "SONY"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.model",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 58,
            "offset_start": 46,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "IterationOne"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "software",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 82,
            "offset_start": 70,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyTestGen"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "orientation",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 70,
            "offset_start": 58,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.width",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 22,
            "offset_start": 10,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 800
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.height",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 34,
            "offset_start": 22,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 600
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.iso",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 194,
            "offset_start": 182,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 200
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.aperture",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 182,
            "offset_start": 170,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 10,
            "numerator": 56
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.shutter_speed",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 170,
            "offset_start": 158,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 250,
            "numerator": 1
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.focal_length_mm",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 206,
            "offset_start": 194,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "float",
          "value": 50.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.model",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 230,
            "offset_start": 218,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty 50mm F2"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.make",
        "sources": [
          {
            "container": "arw",
            "namespace": "exif",
            "offset_end": 218,
            "offset_start": 206,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty Optics"
        }
      }
    ]
  },
  "report": {
    "conflicts": [],
    "issues": []
  },
  "schema_version": "0.1.0"
}
