crates/xifty-cli/tests/snapshots/cli_contract__extract_happy_avif_normalized.snap
---
source: crates/xifty-cli/tests/cli_contract.rs
assertion_line: 215
expression: "extract_json(\"happy.avif\", ViewMode::Normalized)"
---
{
  "input": {
    "container": "isobmff",
    "detected_format": "avif",
    "path": "happy.avif"
  },
  "normalized": {
    "fields": [
      {
        "confidence": 0.949999988079071,
        "field": "captured_at",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 186,
            "offset_start": 174,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "created_at",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 198,
            "offset_start": 186,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "timestamp",
          "value": "2024-04-16T12:34:56"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.make",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 82,
            "offset_start": 70,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyCam"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "device.model",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 94,
            "offset_start": 82,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "IterationOne"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "software",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 118,
            "offset_start": 106,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFtyTestGen"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "orientation",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 106,
            "offset_start": 94,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.width",
        "notes": [
          "selected ImageWidth from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 58,
            "offset_start": 46,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 800
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "dimensions.height",
        "notes": [
          "selected ImageHeight from exif over 1 competing candidate(s)"
        ],
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 70,
            "offset_start": 58,
            "path": "ifd0"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 600
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.iso",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 234,
            "offset_start": 222,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 200
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.aperture",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 222,
            "offset_start": 210,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 10,
            "numerator": 56
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.shutter_speed",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 210,
            "offset_start": 198,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "rational",
          "value": {
            "denominator": 250,
            "numerator": 1
          }
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "exposure.focal_length_mm",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 246,
            "offset_start": 234,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "float",
          "value": 50.0
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.model",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 270,
            "offset_start": 258,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty 50mm F2"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "lens.make",
        "sources": [
          {
            "container": "avif",
            "namespace": "exif",
            "offset_end": 258,
            "offset_start": 246,
            "path": "exif_ifd"
          }
        ],
        "value": {
          "kind": "string",
          "value": "XIFty Optics"
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "color.primaries",
        "sources": [
          {
            "container": "avif",
            "namespace": "avif",
            "notes": [
              "derived from cicp property for primary item"
            ],
            "offset_end": 479,
            "offset_start": 463,
            "path": "meta/iprp/ipco/cicp"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 9
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "color.transfer",
        "sources": [
          {
            "container": "avif",
            "namespace": "avif",
            "notes": [
              "derived from cicp property for primary item"
            ],
            "offset_end": 479,
            "offset_start": 463,
            "path": "meta/iprp/ipco/cicp"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 16
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "color.matrix",
        "sources": [
          {
            "container": "avif",
            "namespace": "avif",
            "notes": [
              "derived from cicp property for primary item"
            ],
            "offset_end": 479,
            "offset_start": 463,
            "path": "meta/iprp/ipco/cicp"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 9
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "color.range",
        "sources": [
          {
            "container": "avif",
            "namespace": "avif",
            "notes": [
              "derived from cicp property for primary item"
            ],
            "offset_end": 479,
            "offset_start": 463,
            "path": "meta/iprp/ipco/cicp"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 1
        }
      },
      {
        "confidence": 0.949999988079071,
        "field": "color.bit_depth",
        "sources": [
          {
            "container": "avif",
            "namespace": "avif",
            "notes": [
              "derived from pixi property for primary item"
            ],
            "offset_end": 444,
            "offset_start": 428,
            "path": "meta/iprp/ipco/pixi"
          }
        ],
        "value": {
          "kind": "integer",
          "value": 10
        }
      }
    ]
  },
  "report": {
    "conflicts": [
      {
        "field": "dimensions.width",
        "message": "multiple candidates disagreed; selected ImageWidth from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "avif",
              "namespace": "exif",
              "offset_end": 58,
              "offset_start": 46,
              "path": "ifd0"
            },
            "tag_id": "0x0100",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 800
            }
          },
          {
            "namespace": "avif",
            "provenance": {
              "container": "avif",
              "namespace": "avif",
              "notes": [
                "derived from ispe property for primary item"
              ],
              "offset_end": 428,
              "offset_start": 408,
              "path": "meta/iprp/ipco/ispe"
            },
            "tag_id": "ImageWidth",
            "tag_name": "ImageWidth",
            "value": {
              "kind": "integer",
              "value": 100
            }
          }
        ]
      },
      {
        "field": "dimensions.height",
        "message": "multiple candidates disagreed; selected ImageHeight from exif",
        "sources": [
          {
            "namespace": "exif",
            "provenance": {
              "container": "avif",
              "namespace": "exif",
              "offset_end": 70,
              "offset_start": 58,
              "path": "ifd0"
            },
            "tag_id": "0x0101",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 600
            }
          },
          {
            "namespace": "avif",
            "provenance": {
              "container": "avif",
              "namespace": "avif",
              "notes": [
                "derived from ispe property for primary item"
              ],
              "offset_end": 428,
              "offset_start": 408,
              "path": "meta/iprp/ipco/ispe"
            },
            "tag_id": "ImageHeight",
            "tag_name": "ImageHeight",
            "value": {
              "kind": "integer",
              "value": 80
            }
          }
        ]
      }
    ],
    "issues": []
  },
  "schema_version": "0.1.0"
}
